Fixed header length in dark mode

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
 nav,
 header,
 #projects {
-  transition: all 300ms 200ms ease;
+  transition: all 300ms ease;
 }
 
 .modal--open nav,
@@ -59,11 +59,11 @@ header,
   fill: black;
 }
 
-.dark-theme .nav__content {
+.dark-theme nav {
   background-color: white;
 }
 
-.dark-theme .header__container {
+.dark-theme header {
   background-color: rgb(0, 0, 0);
 }
 
@@ -90,6 +90,7 @@ header,
 nav {
   width: 100%;
   height: 10%;
+  background-color: black;
 }
 
 .nav__content {
@@ -100,7 +101,6 @@ nav {
   width: 100%;
   height: 100%;
   margin: 0 auto;
-  background-color: black;
   transition: all 200ms ease;
 }
 
